Further refactoring of Hypermedia

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(rest_utilities)
 include_directories("${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/include/")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  "${PROJECT_SOURCE_DIR}/lib/")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/lib/")
 
 set(URLTEMPLATE_SOURCE_FILES
         UrlTemplate/UrlTemplate.cpp
@@ -15,16 +15,19 @@ set(URLTEMPLATE_SOURCE_FILES
 add_library(UrlTemplate SHARED ${URLTEMPLATE_SOURCE_FILES})
 
 set(HYPERMEDIA_SOURCE_FILES
-        Hypermedia/Form.cpp
-        Hypermedia/Form.h
-        Hypermedia/Link.cpp
-        Hypermedia/Link.h
-        )
+        Ready4Air/DTO/Hypermedia/Form.cpp
+        Ready4Air/DTO/Hypermedia/Form.h
+        Ready4Air/DTO/Hypermedia/Link.cpp
+        Ready4Air/DTO/Hypermedia/Link.h
+        Ready4Air/DTO/Hypermedia/Crud.cpp
+        Ready4Air/DTO/Hypermedia/Crud.h
+        Ready4Air/DTO/Abstract/JsonDeserializable.h)
 
 add_library(Hypermedia SHARED ${HYPERMEDIA_SOURCE_FILES})
 target_link_libraries(Hypermedia UrlTemplate)
 
-add_executable(HypermediaTester Hypermedia/HypermediaTester.cpp)
+
+add_executable(HypermediaTester Ready4Air/DTO/Hypermedia/HypermediaTester.cpp)
 target_link_libraries(HypermediaTester Hypermedia UrlTemplate)
 
 add_executable(UrlTemplateTester UrlTemplate/UrlTemplateTester.cpp)
