Added missing/updated wrong cmake sets and dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "lib/")
 
 set(READY4AIR_COMMON_SOURCE_FILES
+        ready4air/common/Regex.h
         ready4air/common/Maybe.h
         ready4air/common/Either.h
         )
@@ -27,7 +28,9 @@ set(READY4AIR_URLTEMPLATE_HEADER include/ready4air/urltemplate.h)
 
 add_custom_command(
         OUTPUT ${READY4AIR_URLTEMPLATE_HEADER}
-        COMMAND ready4air/tools/concat.sh ${READY4AIR_URLTEMPLATE_SOURCE_FILES} > ${READY4AIR_URLTEMPLATE_HEADER}
+        COMMAND ready4air/tools/depends.sh ${READY4AIR_COMMON_HEADER} > ${READY4AIR_URLTEMPLATE_HEADER}
+        COMMAND ready4air/tools/concat.sh ${READY4AIR_URLTEMPLATE_SOURCE_FILES} >> ${READY4AIR_URLTEMPLATE_HEADER}
+        DEPENDS ${READY4AIR_COMMON_HEADER}
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 
@@ -42,7 +45,9 @@ set(READY4AIR_HYPERMEDIA_HEADER include/ready4air/hypermedia.h)
 
 add_custom_command(
         OUTPUT ${READY4AIR_HYPERMEDIA_HEADER}
-        COMMAND ready4air/tools/concat.sh ${READY4AIR_HYPERMEDIA_SOURCE_FILES} > ${READY4AIR_HYPERMEDIA_HEADER}
+        COMMAND ready4air/tools/depends.sh ${READY4AIR_URLTEMPLATE_HEADER} > ${READY4AIR_HYPERMEDIA_HEADER}
+        COMMAND ready4air/tools/concat.sh ${READY4AIR_HYPERMEDIA_SOURCE_FILES} >> ${READY4AIR_HYPERMEDIA_HEADER}
+        DEPENDS ${READY4AIR_URLTEMPLATE_HEADER}
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 
@@ -69,6 +74,12 @@ set(READY4AIR_DTO_SOURCE_FILES
         ready4air/dto/UserRating.h
         ready4air/dto/Reviews.h
         ready4air/dto/Genre.h
+        ready4air/dto/ProtectionData.h
+        ready4air/dto/PlaySubtitle.h
+        ready4air/dto/Manifest.h
+        ready4air/dto/File.h
+        ready4air/dto/Manifests.h
+        ready4air/dto/Play.h
         ready4air/dto/Product.h
         ready4air/dto/MediaProduct.h
         ready4air/dto/Section.h
@@ -95,12 +106,6 @@ set(READY4AIR_DTO_SOURCE_FILES
         ready4air/dto/Literal.h
         ready4air/dto/Movie.h
         ready4air/dto/Page.h
-        ready4air/dto/ProtectionData.h
-        ready4air/dto/PlaySubtitle.h
-        ready4air/dto/Manifest.h
-        ready4air/dto/File.h
-        ready4air/dto/Manifests.h
-        ready4air/dto/Play.h
         ready4air/dto/SeasonProduct.h
         ready4air/dto/Season.h
         ready4air/dto/Series.h
@@ -117,19 +122,36 @@ set(READY4AIR_DTO_HEADER include/ready4air/dto.h)
 
 add_custom_command(
         OUTPUT ${READY4AIR_DTO_HEADER}
-        COMMAND ready4air/tools/concat.sh ${READY4AIR_DTO_SOURCE_FILES} > ${READY4AIR_DTO_HEADER}
+        COMMAND ready4air/tools/depends.sh ${READY4AIR_HYPERMEDIA_HEADER} > ${READY4AIR_DTO_HEADER}
+        COMMAND ready4air/tools/concat.sh ${READY4AIR_DTO_SOURCE_FILES} >> ${READY4AIR_DTO_HEADER}
+        DEPENDS ${READY4AIR_HYPERMEDIA_HEADER}
+        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+)
+
+set(READY4AIR_EXTERNAL_SOURCE_FILES
+        ready4air/external/RequestData.h
+        ready4air/external/ResponseData.h
+        ready4air/external/IEventPayload.h
+        ready4air/external/IEvent.h
+        ready4air/external/IHttpClient.h
+        )
+
+set(READY4AIR_EXTERNAL_HEADER include/ready4air/external.h)
+
+add_custom_command(
+        OUTPUT ${READY4AIR_EXTERNAL_HEADER}
+        COMMAND ready4air/tools/depends.sh ${READY4AIR_COMMON_HEADER} > ${READY4AIR_EXTERNAL_HEADER}
+        COMMAND ready4air/tools/concat.sh ${READY4AIR_EXTERNAL_SOURCE_FILES} >> ${READY4AIR_EXTERNAL_HEADER}
+        DEPENDS ${READY4AIR_COMMON_HEADER}
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
 
 set(READY4AIR_SERVICES_SOURCE_FILES
-        ready4air/external/RequestData.h
-        ready4air/external/ResponseData.h
-        ready4air/external/IEvent.h
-        ready4air/external/IHttpClient.h
         ready4air/services/RequestService.h
         ready4air/services/Error.h
         ready4air/services/exceptions/BadHttpClientType.h
         ready4air/services/exceptions/BadEventType.h
+        ready4air/services/exceptions/BadEventPayloadType.h
         ready4air/services/exceptions/BadPaginatedType.h
         ready4air/services/PagesService.h
         ready4air/services/HelpsService.h
@@ -148,9 +170,18 @@ set(READY4AIR_SERVICES_HEADER include/ready4air/services.h)
 
 add_custom_command(
         OUTPUT ${READY4AIR_SERVICES_HEADER}
-        COMMAND ready4air/tools/concat.sh ${READY4AIR_SERVICES_SOURCE_FILES} > ${READY4AIR_SERVICES_HEADER}
+        COMMAND ready4air/tools/depends.sh ${READY4AIR_DTO_HEADER} ${READY4AIR_EXTERNAL_HEADER} > ${READY4AIR_SERVICES_HEADER}
+        COMMAND ready4air/tools/concat.sh ${READY4AIR_SERVICES_SOURCE_FILES} >> ${READY4AIR_SERVICES_HEADER}
+        DEPENDS ${READY4AIR_DTO_HEADER} ${READY4AIR_EXTERNAL_HEADER}
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
 )
+
+set(REGEX_TESTS_SOURCE_FILES
+        ready4air/tests/RegexTester.cpp
+        ready4air/common/Regex.h
+        )
+
+add_executable(RegexTester ${REGEX_TESTS_SOURCE_FILES})
 
 set(MAYBE_TESTS_SOURCE_FILES
         ready4air/tests/MaybeTester.cpp
@@ -176,6 +207,7 @@ add_executable(HypermediaTester ${HYPERMEDIA_TESTS_SOURCE_FILES})
 set(READY4AIR_DTO_TESTS_SOURCE_FILES
         ready4air/tests/dto/DTO.cpp
         ready4air/tests/dto/ServiceRoot.h
+        ready4air/tests/dto/FormTest.h
         ${READY4AIR_DTO_SOURCE_FILES}
         ${READY4AIR_HYPERMEDIA_SOURCE_FILES}
         ${READY4AIR_URLTEMPLATE_SOURCE_FILES}
@@ -188,6 +220,7 @@ set(READY4AIR_SERVICES_TESTS_SOURCE_FILES
         ready4air/tests/services/HttpClient.h
         ready4air/tests/services/AuthDeviceEvent.h
         ${READY4AIR_SERVICES_SOURCE_FILES}
+        ${READY4AIR_EXTERNAL_SOURCE_FILES}
         ${READY4AIR_DTO_SOURCE_FILES}
         ${READY4AIR_HYPERMEDIA_SOURCE_FILES}
         ${READY4AIR_URLTEMPLATE_SOURCE_FILES}
@@ -204,19 +237,22 @@ set(READY4AIR_TESTS_SOURCE_FILES
 
 add_executable(Ready4AirTester ${READY4AIR_TESTS_SOURCE_FILES})
 
-set(READY4AIR_ROOT_HEADER include/ready4air/ready4air.h)
-
-add_custom_command(
-        OUTPUT ${READY4AIR_ROOT_HEADER}
-        COMMAND ready4air/tools/createroot.sh ${READY4AIR_COMMON_HEADER} ${READY4AIR_URLTEMPLATE_HEADER} ${READY4AIR_HYPERMEDIA_HEADER} ${READY4AIR_DTO_HEADER} ${READY4AIR_SERVICES_HEADER} > ${READY4AIR_ROOT_HEADER}
-        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
-)
+#set(READY4AIR_ROOT_HEADER include/ready4air/ready4air.h)
+#
+#add_custom_command(
+#        OUTPUT ${READY4AIR_ROOT_HEADER}
+#        COMMAND ready4air/tools/createroot.sh ${READY4AIR_SERVICES_HEADER} > ${READY4AIR_ROOT_HEADER}
+#        DEPENDS ${READY4AIR_SERVICES_HEADER}
+#        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+#)
 
 add_custom_target(READY4AIR_HEADERS
         DEPENDS
-            ${READY4AIR_COMMON_HEADER}
-            ${READY4AIR_URLTEMPLATE_HEADER}
-            ${READY4AIR_HYPERMEDIA_HEADER}
-            ${READY4AIR_DTO_HEADER}
+#            ${READY4AIR_COMMON_HEADER}
+#            ${READY4AIR_URLTEMPLATE_HEADER}
+#            ${READY4AIR_HYPERMEDIA_HEADER}
+#            ${READY4AIR_DTO_HEADER}
+#            ${READY4AIR_EXTERNAL_HEADER}
             ${READY4AIR_SERVICES_HEADER}
-            ${READY4AIR_ROOT_HEADER})
+#            ${READY4AIR_ROOT_HEADER}
+        )
